[#401]Fixed Track spacing/height issues, I think.

--- a/src/ui/butter.ui.css
+++ b/src/ui/butter.ui.css
@@ -582,7 +582,7 @@ THE SOFTWARE.
   cursor: move;
   overflow: hidden;
   display: block;
-  height: 27px;
+  height: 26px;
   margin-top: 1px;
   line-height: 25px;
   opacity: 0.8;
@@ -604,8 +604,8 @@ THE SOFTWARE.
   background-position: 0 0;
   background-repeat: repeat;
   background-size: auto auto;
-  height: 29px;
-  margin-bottom: 4.5px;
+  height: 28px;
+  margin-bottom: 5px;
   position: relative;
   box-shadow: inset 2px 1.2px 1px rgba(0,0,0,0.8), 
               inset -1px 1.2px 1px rgba(0,0,0,0.8),
